# Signal-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: channels.yaml  rules.yaml  traders.yaml
scripts/: inspect_positions.py  replay_test.py  send_test_notification.py  setup_browser.py
src/signal_bot/: __init__.py  __main__.py  config.py  db.py  kill_switch.py  orchestrator.py
src/signal_bot/audit/: log.py
src/signal_bot/executor/: base.py  paper_executor.py  robinhood_executor.py
src/signal_bot/filter/: entry_rules.py  update_rules.py
src/signal_bot/notifier/: base.py  imessage.py  twilio_sms.py
src/signal_bot/parser/: entry_parser.py  models.py  prompts.py  update_parser.py
src/signal_bot/positions/: auto_rules.py  manager.py  models.py  state.py
src/signal_bot/reader/: discord_reader.py  media.py  models.py
tests/: test_audit.py  test_config.py  test_db.py  test_scaffold.py
