[project]
name = "signal-bot"
version = "0.0.1"
description = "Discord trading-signal assistant with HITL execution via Robinhood MCP"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "playwright>=1.50.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "yfinance>=0.2.40",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Avoid depending on uv's editable install — its .pth file is created with the
# macOS UF_HIDDEN flag and silently skipped by site.py. pythonpath = ["src"]
# makes the package importable from the source tree directly.
pythonpath = ["src"]
